[package]
name = "brain_core"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.38.4", features = ["serialize", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
zip = "7.0.0"
